--- a/index.html
+++ b/index.html
@@ -1,5 +1,13 @@
-<!doctype-html>
-<mtml-lang="en">
+<!DOCTYPE html>
+<html lang="en">
 
 <head>
-|....
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="x-UA-Compatible" content="ie=edge">
+    <title>"Did it work?\"</title>
+</head>
+<body>
+        <h1>Git is Fun!</h1>
+</body>
+</html>
