--- a/index.html
+++ b/index.html
@@ -5,9 +5,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="x-UA-Compatible" content="ie=edge">
-    <title>"Did it work?\"</title>
+    <title>"what is wrong"</title>
 </head>
 <body>
         <h1>Git is Fun!</h1>
+        <p>Cool Site!</p>
 </body>
 </html>
