changed body text

--- a/index.html
+++ b/index.html
@@ -8,8 +8,7 @@
     <title>"what is wrong"</title>
 </head>
 <body>
-        <h1>Git is Fun!</h1>
-        <p>This is annoying</p>
-        <p>Cool Site!</p>
+        <h1>Why are we still here?</h1>
+        <p>Just to suffer?</p>
 </body>
 </html>
